--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -15,7 +15,7 @@
 		},
 		"dataSources": {
 			"ZSY_COMM_SH_SRV": {
-				"uri": "/sap/opu/odata/sap/ZSY_COMM_SH_SRV/",
+				"uri": "/SD4/sap/opu/odata/sap/ZSY_COMM_SH_SRV/",
 				"type": "OData",
 				"settings": {
 					"odataVersion": "2.0",
@@ -23,7 +23,7 @@
 				}
 			},
 			"ZSY_MM_BULKPACK_SRV": {
-				"uri": "/sap/opu/odata/sap/ZSY_MM_BULKPACK_SRV/",
+				"uri": "/SD4/sap/opu/odata/sap/ZSY_MM_BULKPACK_SRV/",
 				"type": "OData",
 				"settings": {
 					"odataVersion": "2.0",
@@ -31,7 +31,7 @@
 				}
 			},
 			"ZSY_MM_PRINT_INFO_SRV": {
-				"uri": "/sap/opu/odata/sap/ZSY_MM_PRINT_INFO_SRV/",
+				"uri": "/SD4/sap/opu/odata/sap/ZSY_MM_PRINT_INFO_SRV/",
 				"type": "OData",
 				"settings": {
 					"odataVersion": "2.0",
@@ -39,7 +39,15 @@
 				}
 			},
 			"ZSY_FIORI_LABELREDO_SRV": {
-				"uri": "/sap/opu/odata/sap/ZSY_FIORI_LABELREDO_SRV/",
+				"uri": "/SD4/sap/opu/odata/sap/ZSY_FIORI_LABELREDO_SRV/",
+				"type": "OData",
+				"settings": {
+					"odataVersion": "2.0",
+					"localUri": "localService/metadata.xml"
+				}
+			},
+			"ZSY_MM106_BULK_PACKING_SRV": {
+				"uri": "/SD4/sap/opu/odata/sap/ZSY_MM106_BULK_PACKING_SRV/",
 				"type": "OData",
 				"settings": {
 					"odataVersion": "2.0",
@@ -48,7 +56,6 @@
 			}
 		}
 	},
-
 	"sap.ui": {
 		"technology": "UI5",
 		"icons": {
@@ -67,10 +74,8 @@
 		"supportedThemes": [
 			"sap_hcb",
 			"sap_belize"
-
 		]
 	},
-
 	"sap.ui5": {
 		"rootView": {
 			"viewName": "com.shunyu.slpack.view.App",
@@ -107,8 +112,8 @@
 			"ZSY_MM_BULKPACK_SRV": {
 				"type": "sap.ui.model.odata.v2.ODataModel",
 				"dataSource": "ZSY_MM_BULKPACK_SRV",
-				"defaultBindingMode": "ThreeWay"
-			},			
+				"defaultBindingMode": "TwoWay"
+			},
 			"ZSY_MM_PRINT_INFO_SRV": {
 				"type": "sap.ui.model.odata.v2.ODataModel",
 				"dataSource": "ZSY_MM_PRINT_INFO_SRV",
@@ -118,45 +123,42 @@
 				"type": "sap.ui.model.odata.v2.ODataModel",
 				"dataSource": "ZSY_FIORI_LABELREDO_SRV",
 				"defaultBindingMode": "TwoWay"
+			},
+			"ZSY_MM106_BULK_PACKING_SRV": {
+				"type": "sap.ui.model.odata.v2.ODataModel",
+				"dataSource": "ZSY_MM106_BULK_PACKING_SRV",
+				"defaultBindingMode": "TwoWay"
 			}
 		},
 		"resources": {
-			"css": [{
-				"uri": "css/style.css"
-			}]
+			"css": [
+				{
+					"uri": "css/style.css"
+				}
+			]
 		},
-		"routing": {
-			"config": {
-				"routerClass": "sap.m.routing.Router",
-				"viewType": "XML",
-				"viewPath": "com.shunyu.slpack.view",
-				"controlId": "app",
-				"controlAggregation": "pages",
-				"async": true
+		"routes": [
+			{
+				"pattern": "",
+				"name": "Index",
+				"target": "Index"
 			},
-			"routes": [
-				{
-					"pattern": "",
-					"name": "Index",
-					"target": "Index"
-				},
-				{
-					"pattern": "Slpack/{params}",
-					"name": "Slpack",
-					"target": ["Slpack"]
-				}
-			],
-			"targets": {
-				"Index": {
-					"viewId": "Index",
-					"viewName": "Index"
-				},
-				"Slpack": {
-					"viewType": "XML",
-					"viewLevel": 1,
-					"viewId": "Slpack",
-					"viewName": "Slpack"
-				}
+			{
+				"pattern": "Slpack/{params}",
+				"name": "Slpack",
+				"target": ["Slpack"]
+			}
+		],
+		"targets": {
+			"Index": {
+				"viewId": "Index",
+				"viewName": "Index"
+			},
+			"Slpack": {
+				"viewType": "XML",
+				"viewLevel": 1,
+				"viewId": "Slpack",
+				"viewName": "Slpack"
 			}
 		}
 	}
